--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>My Home Page</title>
+    <title>Jarno Liedes - Portfolio</title>
   </head>
-  <body style="background-color: #282c34">
+  <body style="background-color: #3c3c44">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
