--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Jarno Liedes - Portfolio</title>
   </head>
-  <body style="background-color: #3c3c44">
+  <body style="background-color: #444453">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
